fix overflow of page

--- a/src/components/about/About.module.scss
+++ b/src/components/about/About.module.scss
@@ -14,7 +14,7 @@
     text-transform: uppercase;
   }
   img {
-    width: 10vw;
+    width: 25vw;
     height: auto;
     border-radius: 50%;
   }
@@ -28,10 +28,11 @@
   }
   .skills {
     align-self: center;
+    width: 90%;
 
     li {
       display: inline-block;
-      width: 45%;
+      width: 40%;
       padding: 1em 0em 1em 0em;
     }
   }
@@ -43,6 +44,10 @@
 
 @media (min-width: 700px) {
   .about {
+    img {
+      width: 200px;
+      height: auto;
+    }
     p,
     h2,
     .skills {
